# mob-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  cmake-lib-build-steps.txt  main.cpp  tools.py
assets/: config.json  entities.json  plants.json  world.json
src/: application.cpp  application.hpp  config.cpp  config.hpp  event-handler.cpp  event-handler.hpp  global.cpp  global.hpp  main.cpp
src/app/: application.cpp  application.hpp  event-handler.cpp
src/config/: config.cpp  config.hpp
src/config/sdl2/: sdl-config.cpp
src/config/sdl2/graphics/: image.cpp  image.hpp  window.cpp  window.hpp
src/entity/: entity.cpp  entity.hpp
src/entity/mobs/: wolf.cpp  wolf.hpp
src/sdl2/: config.cpp  config.hpp
src/sdl2/graphics/: window.cpp  window.hpp
src/utils/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  exception.cpp  exception.hpp  handle-mobs.hpp  mouse.hpp
src/utils/events/: mouse.cpp
src/utils/math/: collision.cpp  collision.hpp  math-basics.cpp  math-basics.hpp  math.cpp  math.hpp  wavefront.cpp  wavefront.hpp
src/utils/render/: animation.cpp  animation.hpp
src/utils/world/: camera.cpp  camera.hpp  handle-mobs.cpp  handle-mobs.hpp  handle-plants.cpp  handle-plants.hpp  wavefront.cpp  wavefront.hpp  world-positions.cpp  world-positions.hpp
src/world/: world.hpp
src/world/entity/: entity.cpp  entity.hpp
src/world/entity/mobs/: mobs.hpp  wolf.cpp  wolf.hpp
